2.4.1

	* fi-sublisp.el,
	* fi-subproc.el,
	* fi-utils.el: bug13275: new variable fi::started-via-file which
	  is set to `t' in fi:start-interface-via-file.  This was
	  separated from fi:connect-to-windows since it's reaelly a
	  different thing.

	* fi-keys.el (fi:super-paren): bug13181: fi:super-paren: at end of
	  comment, would loop infinitely (until ^G)

2003-08-19  Kevin Layer  <layer@crikey>

	* Makefile: fi-vers.el change not put into makefile!

2003-08-14  Kevin Layer  <layer@crikey>
2.4.0

	* fi-keys.el: improve fi:subprocess-beginning-of-line for
	  non-prompt lines
	* local.mak: add examples/eval.el
	* (NEW) examples/eval.el: from Bill_Clementson@jdedwards.com
	* doc/eli.htm: add missing stuff

	* (NEW) README: internal info
	* fi-keys.el,
	* fi-lep.el,
	* fi-site-init.el,
	* fi-vers.el: internalize (fi::) a few external variables (fi:)

2003-08-14  Kevin Layer  <layer@crikey>

	* fi-basic-lep.el: parameterize the *CL-temp* buffer name (not
	  used by anything yet)
	* fi-keys.el: fix minor problems with bindings, found while
	  revamping eli.htm to contain newest info.

2003-08-12  Kevin Layer  <layer@crikey>

    for rfe5611:
	* fi-basic-lep.el: make fi:pop-up-temp-window-behavior value of
	  '(minibuffer) work more as expected.  Evaluations send their
	  output to the minibuffer, when possible, the *CL-Temp* buffer
	  when it's too large.
	* fi-keys.el:
>>>	- rename fi:arglist-space-style to fi:auto-arglist-pop-up-style
	- cleanup
	* fi-lze.el: make fi::eval-region-internal respect '(minibuffer)
	  value of fi:pop-up-temp-window-behavior
	* fi-shell.el: remove unused bindings (clean compile in xemacs)
	* fi-utils.el:
	- compare-window-configurations not available on xemacs
	- doc string updates
	- make fi:pop-up-temp-window-behavior respect value of
	  '(minibuffer) work as expected
	- fix error in fi:start-interface-via-file

2003-08-11  Kevin Layer  <layer@crikey>

    for rfe5611:
	* fi-site-init.el: load fi-utils before fi-keys