@@ -10,7 +10,7 @@
 ;; Franz Incorporated provides this software "as is" without
 ;; express or implied warranty.
 ;;
-;; $Id: fi-xemacs.el,v 2.11.6.3.8.1 2003/08/07 18:16:52 layer Exp $
+;; $Id: fi-xemacs.el,v 2.11.6.3.8.2 2003/08/29 22:42:20 layer Exp $
 
 (defun fi-find-buffer-visiting (filename)
   (get-file-buffer filename))
@@ -274,29 +274,20 @@
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-(defun fi::install-menubar (menu-bar)
-  (add-menu nil (car menu-bar) (cdr menu-bar) nil))
+(defun fi::install-menubar (where menu-bar)
+  (add-submenu where menu-bar))
 
 (defun fi::install-buffer-local-xemacs-acl-menubar ()
   (when (eq current-menubar (default-value 'current-menubar))
     ;; current-menubar isn't yet buffer local
     (set-buffer-menubar current-menubar)
-    (cond (fi:menu-bar-single-item
-	   (fi::install-menubar
-	    (list "ACL"
-		  fi:allegro-file-menu
-		  fi:allegro-edit-menu
-		  fi:allegro-debug-menu
-		  fi:allegro-help-menu
-		  (when (and fi:composer-menu (not (on-ms-windows)))
-		    fi:composer-menu))))
-	  (t
-	   (fi::install-menubar fi:allegro-file-menu)
-	   (fi::install-menubar fi:allegro-edit-menu)
-	   (fi::install-menubar fi:allegro-debug-menu)
-	   (fi::install-menubar fi:allegro-help-menu)
-	   (when (and fi:composer-menu (not (on-ms-windows)))
-	     (fi::install-menubar fi:composer-menu))))))
+    (let ((where (if fi:menu-bar-single-item '("ACL") nil)))
+      (fi::install-menubar where fi:allegro-file-menu)
+      (fi::install-menubar where fi:allegro-edit-menu)
+      (fi::install-menubar where fi:allegro-debug-menu)
+      (fi::install-menubar where fi:allegro-help-menu)
+      (when (and fi:composer-menu (not (on-ms-windows)))
+	(fi::install-menubar where fi:composer-menu)))))
 
 (defvar fi::menubar-initialization)
 (setq fi::menubar-initialization
